# aepp-sdk-python

./: .env  .flake8  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Dockerfile  Dockerfile.ci  INSTALL.md  Jenkinsfile  KS_TEST  KS_TEST_ACC2  Makefile  README.md  aecli  command-line-tool.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
aeternity/: __init__.py  __main__.py  aens.py  aevm.py  channel.py  compiler.py  config.py  contract.py  contract_native.py  defaults.py  epoch.py  exceptions.py  formatter.py  hashing.py  hdwallet.py  identifiers.py  node.py  openapi.py  oracle.py  oracles.py  requirements.txt  signing.py  transactions.py  utils.py
aeternity/tests/: __init__.py  test_aens.py  test_api.py  test_cli.py  test_contract.py  test_epoch.py  test_hashing.py  test_openapi.py  test_oracle.py  test_signing.py  test_transactions.py  test_utils.py
assets/swagger/: 0.13.0.json  0.14.0.json
docker/: accounts.json  accounts_test.json  aeternity.yaml  epoch.yaml  epoch_node_mean16.yaml  sdk.env
docs/: README.md  command_line_client.md  conf.py  ga.md  index.rst  keystore_format_change.md  library.md  offline_transaction_signing.md  utilities.md  utils.md
docs/OLD/: ga.md
docs/howto/: accounts_signatures.rst  amounts.rst  cli_accounts.rst  cli_signing.rst  delegate_signatures.rst  index.rst  offline_transactions.rst  validate_contract_bytecode.rst
docs/intro/: contributing.rst  index.rst  install.rst  tutorial01-spend.rst  tutorial02-contracts-call.rst  tutorial02-contracts-deploy.rst  tutorial02-contracts.rst  tutorial03-aens.rst  tutorial04-ga.rst  tutorial05-cli.rst  tutorial05-contracts.rst  tutorial06-hdwallet.rst  tutorial07-offline.rst
docs/ref/: client_and_config.rst  constants.rst  index.rst  txbuilder.rst  txobject.rst  txsigner.rst
docs/snippets/: accounts.py  index.rst
docs/source/: index.rst
docs/source/faq/: index.rst
docs/source/howto/: index.rst
docs/source/intro/: index.rst  install.rst  tutorial01-spend.rst
docs/topics/: index.rst  install.rst  keystore_format_change.rst
examples/: aens.md  aens_example.py  index.md  oracle_operator_example.py  oracle_request_example.py  spend.py
old/: README.md
old/bash/: aeternity-functions.sh  dev1.sh  dev2.sh  dev3.sh
old/python/: README.md  aens-query.py  aens-test.py  aens.py  epoch.py  oracle-client.py  oracle-server.py  oracle.py  po-recv.py  po-send.py  po.py  requirements.txt  test-epoch.py
tests/: __init__.py  conftest.py  example_tutorial01-spend.py  test_aens.py  test_api.py  test_channel2.py  test_channels.py  test_cli.py  test_compiler.py  test_contract.py  test_contract_delegation.py  test_contract_lima.py  test_contract_native.py  test_epoch.py  test_hashing.py  test_hd_wallet.py  test_node.py  test_node_delegate_sig.py  test_openapi.py  test_oracle.py  test_signing.py  test_sophia_transformation.py  test_transactions.py  test_tutorial01-spend.py  test_tutorial05-contracts.py  test_tutorial06-hdwallet.py  test_tutorial07-offline.py  test_utils.py
tests/testdata/: CryptoHamster.aes  identity.aes  identity.aes.aci.json  keystore.invalid.json  keystore.json  simplestorage.aes
