[tool.poetry]
name = "aepp-sdk"
version = "7.0.0"
description = "Python SDK to interact with the Æternity blockchain"
authors = [
  "Andrea Giacobino <no.andrea@gmail.com>", 
  "Shubhendu Shekhar <shubhendu@apeunit.com>"
]
license = "ISC"
homepage = "https://github.com/aeternity/aepp-sdk-python"
repository = "https://github.com/aeternity/aepp-sdk-python"
readme = "README.md"
keywords = ["aeternity", "blockchain", "sdk"]
include = ["CHANGELOG.md"]
classifiers = [
    'License :: OSI Approved :: ISC License (ISCL)',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
]
packages = [
    { include = "aeternity" },
]

[tool.poetry.dependencies]
python = "^3.7"
base58 = ">=1,<3"
click = "^7.0"
rlp = "^1.1"
PyNaCl = "^1.3"
requests = "^2.20"
validators = ">=0.13,<0.15"
semver = "^2.8"
Deprecated = "^1.2"
websockets = ">=7,<9"
simplejson = "^3.16.0"
mnemonic = "^0.19.0"
munch = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
flake8 = "^3.7"
pytest-cov = "^2.7"
coverage = "^5.0"
sphinx = "^2.3"
sphinx_rtd_theme = "^0.4.3"
git-changelog = "^0.4.0"

[tool.poetry.extras]
test = ["coverage", "pytest"]

[tool.poetry.scripts]
aecli = "aeternity.__main__:run"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "pip", path = "requirements.txt"}

[build-system]
requires = ["poetry>=1.0.1"]
build-backend = "poetry.masonry.api"


